# ocaml-starter

./: README.md  dune-project  ocaml_starter.opam
lib/ocaml_starter/: dune
test/ocaml_starter/: dune  test_ocaml_starter.ml
